# daily_summary

./: .gitignore  CMakeLists.txt  README.md  main.cpp
controller/: Controller.cpp
model/: Data.cpp  Data.hpp
src/: main.cpp
src/controller/: Controller.cpp  Controller.hpp
src/model/: Data.cpp  Data.hpp
src/view/: View.cpp  View.hpp
test/: CMakeLists.txt  ControllerTest.cpp  DataTest.cpp
